stylesheets/blog.css
/* ... */
html{
  background-color: #33333;
  font-family: sofia_prolight;
  color: white;
}

.nav{
  text-align: center;
  position: fixed;
  z-index: 9999;
  background-color: #15a9ce;
  border-bottom: 4px solid white;
  border-radius: 10px;
  text-color: white;
  width: 100%;
  top: -20px;
  left: -48px;
  padding: 20px;
  margin: 20px;
  word-spacing: 4em;
}

.header{
  top: 100px;
  font-size: 1em;
  padding: 10px 0px 100px 0px;
  text-decoration: underline;
}

.blog-list hr{
  width: 50%;
}

.blog-list{
  font-size: 1.2em;
  top: 100px;
  position: relative;
  text-align: center;
}

.list{
  top: 100px;
  margin: 0 auto;
  text-align: center;
  position: relative;
  line-height: 30px;
  right: 20px;
}

.list hr{
  width: 85%;
}

ul{
  list-style-type: none;
}

p{
  text-align: justify;
  text-indent: 50px;
  top: -200px
}

.post{
  margin: 0 auto;
  text-align: center;
  width: 75%;
}

.post_header{
  left: -200px;
  text-align: center;
  position: relative;
}

div > h1{
  position: relative;
  font-size: 3em;
  left: 200px;
}

h3{
  font-style: italic;
}

.lower_blog{
  text-align: center;
  top: 100px;
  padding: 10px;
  margin: 0 auto;
  margin-top: 20px;
  margin-bottom: 20px;
  position: relative;
  border: 2px solid white;
  border-radius: 10px;
  width: 200px;
}

.lower_blog_index{
  position: relative;
  text-align: center;
  padding: 10px;
  top: 300px;
  margin: 0 auto;
  margin-bottom: 20px;
  border: 1px solid white;
  border-radius: 10px;
  width: 100px;
}

.img-800{
  max-width: 600px;
  height: auto;
  margin: 0 auto;
  text-align: center;
  position: relative;
}

